--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 </video>
 <div id="landingFilter"></div>
 <div class="landingWrapper">
-  <object id="landingGlobe" data="{{ site.baseurl }}/assets/landing-globe.svg" type="image/svg+xml"></object>
+  <object id="globe" data="{{ site.baseurl }}/assets/landing-globe.svg" type="image/svg+xml"></object>
   <span class="landingNavigation">
    <a href="{{ site.baseurl }}/about"><button ontouchstart="">About</button></a>
    <a href="#"><button ontouchstart="">FAQ</button></a>
