--- a/canvas.html
+++ b/canvas.html
@@ -1,6 +1,6 @@
 ---
 ---
-<!DOCTYPE html>
+<html>
  <head>
  <title>Playing YouTube video on HTML5 canvas</title>
  <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width" />
@@ -53,4 +53,4 @@
   }
   </script>
  </body>
- </html>
+</html>
