--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 ---
-<video id="landingVideo" playsinline autoplay muted loop>
+<video id="landingVideo" playsinline autoplay muted inline loop>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
