--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
 layout: landing
 ---
+<video width="320" height="240" autoplay loop muted>
+  <source src="{{ site.baseurl }}/assets/landing.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
 <video id="landingVideo" playsinline autoplay muted inline loop>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
   Your browser does not support HTML5 video.
