--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: landing
   Your browser does not support the video tag.
 </video>
 
-<video id="landingVideo" playsinline autoplay muted inline loop>
+<videxo id="landingVideo" playsinline autoplay muted inline loop>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
