--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 ---
 layout: landing
 ---
-<video width="320" height="240" autoplay loop muted>
-  <source src="{{ site.baseurl }}/assets/landing.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
-
-<videxo id="landingVideo" playsinline autoplay muted inline loop>
+<video id="landingVideo" playsinline autoplay muted inline loop>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
+<script>
+const videoElement = document.getElementById('landingVideo');
+    videoElement.addEventListener('suspend', () => {
+        // suspend invoked
+        // show play button
+        // iphone is in low power mode
+    });
+
+    videoElement.addEventListener('play', () => {
+        // video is played
+        // remove play button UI
+        // iphone is not in low power mode
+    });
+</script>
 <div id="landingFilter"></div>
 <div class="landingWrapper">
   <object class="globe" data="{{ site.baseurl }}/assets/landing-globe.svg" type="image/svg+xml"></object>
