--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: landing
 ---
+<script src="https://cdnjs.cloudflare.com/jquery.js"></script>
 <video id="landingVideo" playsinline autoplay muted inline loop>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
   Your browser does not support HTML5 video.
