--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@ layout: landing
   <span class="landingNavigation">
    <a href="{{ site.baseurl }}/about"><button ontouchstart="">About</button></a>
    <a href="#"><button ontouchstart="">FAQ</button></a>
-   <a href="#"><button ontouchstart="">Join</button></a>
+   <a href="https://iww.org/join"><button ontouchstart="">Join</button></a>
    <a href="#"><button ontouchstart="">Directory</button></a>
    <a href="#"><button ontouchstart="">History</button></a>
    <a href="https://store.iww.org"><button ontouchstart="">Store</button></a>
-   <a href="https://industrialworker.iww.org"><button ontouchstart="">Industrial Worker</button></a>
-   <a href="#"><button ontouchstart="">Contact</button></a>
+   <a href="https://industrialworker.org"><button ontouchstart="">Industrial Worker</button></a>
   </span>
 </div>
