--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: landing
+title: "Industrial Workers of the World"
 ---
 <video id="landingVideo" muted loop playsinline autoplay>
   <source src="{{ site.baseurl }}/assets/landing.mp4" poster="{{ site.baseurl }}/assets/landing.png" type="video/mp4">
